2006-02-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade:
	* glom/mode_design/fields/dialog_fielddefinition.cc:
	* glom/mode_design/fields/dialog_fielddefinition.h: Rename the Default Value tab 
	to Value. Use radiobuttons to make the calculation and the rest mutually exclusive.

0.9.6:

2006-02-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.h: Make on_flowtable_field_edited()
	virtual again so that the override in BoxDataDetails_Find works again, 
	to avoid odd regressions when finding.
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc:
	* glom/utils.cc:
	* glom/base_db.cc: Try to print the SQL command on stdout when there 
	is a problem with it.

2006-02-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/frame_glom.cc: on_notebook_find_criteria(): Show all records if 
	the find was not successful, and the user did not want to try again.

2006-02-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/frame_glom.cc: on_menu_Mode_Find(): Start the Find mode 
	on the same layout (Details or List) as the Data mode was in.
	Add a little hack to make sure that we go back into Data mode in List 
	view at first, to make sure that the first result will show up 
	properly in the Details mode.
	* glom/mode_data/notebook_data.cc:
	* glom/mode_data/notebook_data.h: Added set_current_view().
	* glom/mode_find/notebook_find.cc:
	* glom/mode_find/notebook_find.h: Added set_current_view().

2006-02-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/imageglom.cc: scale(): Call Gtk::Image::get_storage_type() 
	before Gtk::Image::get_pixbuf(), to avoid a critical warning.

2006-02-19  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/imageglom.cc:
	* glom/utility_widgets/imageglom.h: Override on_expose_event() so we can 
	scale the image when we actually have a real (>1) allocation.
	scale(): Do not call set_image() if the scaled pixbuf has exactly the same 